--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,10 +8,10 @@ server {
 
 
     root /application/public;
-    index app.php;
+    index index.php;
 
     if (!-e $request_filename) {
-        rewrite ^.*$ /app.php last;
+        rewrite ^.*$ /index.php last;
     }
 
     location ~ \.php$ {
