--- a/application/config/services.yaml
+++ b/application/config/services.yaml
@@ -23,5 +23,17 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    'Symfony\Component\Serializer\Encoder\JsonDecode':
+        public: true
+
+    'Symfony\Component\Serializer\Encoder\JsonEncode':
+        public: true
+
+    login_success_handler:
+        class:  App\Authorization\Security\SuccessHandler
+        parent: lexik_jwt_authentication.handler.authentication_success
+        public: true
+        autowire: true
+        autoconfigure: false
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
