--- a/application/composer.json
+++ b/application/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cmen/google-charts-bundle": "^3.2",
+        "ghunti/highcharts-php": "^3.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "phpunit/phpunit": "^9.1",
         "sensio/framework-extra-bundle": "^5.1",
